fix(android): keep OpenDroid module adapter broadly Android-compatible